<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:paddingBottom="0.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:linksClickable="true"
        android:text="@string/app_version"
        android:padding="12.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.0dip"
        android:gravity="center"
        style="?android:attr/textAppearanceSmall" />

    <TextView
        android:textColor="#ffc0c0c0"
        android:linksClickable="true"
        android:id="@string/app_developer"
        android:paddingLeft="12.0dip"
        android:paddingTop="0.0dip"
        android:paddingRight="12.0dip"
        android:paddingBottom="0.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.0dip"
        android:text="@string/about_dialog_developed_by_as_link"
        android:gravity="center"
        style="?android:attr/textAppearanceSmall" />

    <TextView
        android:linksClickable="true"
        android:text="@string/web_url"
        android:padding="12.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.0dip"
        android:gravity="center"
        style="?android:attr/textAppearanceSmall" />

    <TextView
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@string/copyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:layout_marginBottom="6.0dip"
        android:text="@string/about_dialog_copyright"
        style="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="10.0sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@string/app_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.0dip"
        android:layout_marginBottom="16.0dip"
        android:text="@string/about_dialog_build_version"
        style="?android:attr/textAppearanceSmall" />
</LinearLayout>
